[project]
name = "u24time-backend"
version = "0.1.0"
description = "U24Time Backend - Crawler Engine, Data Source & Alignment"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "flask>=3.1",
    "flask-sse>=1.0",
    "gunicorn>=23.0",
    # Config & Validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    # HTTP & RSS
    "httpx[http2]>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    # Crawling
    "playwright>=1.44",
    "tenacity>=8.3",
    # Utilities
    "loguru>=0.7",
    "geopy>=2.4",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    "ujson>=5.10",
    "redis>=5.0",
    "flask-cors>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require network)",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]
